# FabricPC

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml  transformer_multi_gpu_results.jsonl
docs/: ROADMAP.md
docs/dev_plans_archive/: INITIALIZATION_REFACTOR_PLAN.md  ROADMAP.md  friendly_model_definition_plan.md  parallelization_plan.md
examples/: PC_backprop_compare.py  README.md  __init__.py  custom_node.py  mnist_advanced.py  mnist_aim_tracking.py  mnist_cyclic_graph.py  mnist_demo.py  mnist_demo_with_identity_node.py  mnist_lateral_connections.py  mnist_multi_gpu.py  transformer_demo.py  transformer_tuning.py  transformer_v2_demo.py
examples/plotting/: visualize_experiment.py
examples/scaling/: __init__.py  mlp_scaling.py  scaling_analysis_plots.py
fabricpc/: README.md  __init__.py
fabricpc/core/: activations.py  config.py  energy.py  inference.py  initialization.py  initializers.py  registry.py  types.py
fabricpc/evaluation/: visualize_experiment.py
fabricpc/examples/: README.md  _charlie1.py  demo_architectures.py  demo_beginner.py  demo_minimal.py  generator_mnist.py  mnist_advanced.py  mnist_advanced_charlie1.py  mnist_charlie1.py  mnist_charlie2.py  mnist_demo.py  mnist_multi_gpu.py
fabricpc/experiments/: __init__.py  ab_experiment.py  (+1 more)
tests/: conftest.py  test_auto_node_grad.py  test_energy.py  test_fabricpc.py  test_fabricpc_extended.py  test_identity_node.py  test_initializers.py  test_multi_gpu.py  test_ndim_shapes.py  test_node_registry.py  test_property.py  test_rope.py  test_shapes.py  test_smoke.py  test_state_initializer.py  test_transformer_nodes.py  test_unit.py
(+36 files in other folders)
