[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fabricpc"
version = "0.2.8"
description = "A flexible, performant predictive coding library using JAX"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    {name = "FabricPC Authors"}
]
keywords = ["predictive-coding", "jax", "neural-networks", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Private :: Do Not Upload",
]

dependencies = [
    "jax[cuda12]",
    "optax>=0.1.7",
    "orbax-checkpoint>=0.4.0",
    "flax>=0.7.5",
    "chex>=0.1.84",
    "jaxtyping>=0.2.23",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
    "black[colorama]==26.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
tfds = [
    "tensorflow-datasets>=4.9.0",
    "tensorflow>=2.15.0",
]
viz = [
    "plotly>=5.0.0",
    "kaleido>=0.2.1",
    "pandas>=2.0.0",
    "aim>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fabricpc*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''